[package]
name = "simple-encdec"
description = "Simple Encrypt / Decrypt"
version = "0.0.1"
authors = ["Marirs <marirs@gmail.com>"]
keywords = ["simnple", "encrypt", "encryption", "decrypt", "decryption"]
edition = "2021"

[dependencies]
base64 = "0.20.0-alpha.1"

[lib]
name = "simple_encdec"
path = "src/lib.rs"

[profile.dev]
opt-level = 3

[profile.release]
debug-assertions = false
debug = false
opt-level = 3
lto = true
